@@ -5,10 +5,10 @@ Last-Update: 2017-07-20
 
 --- a/src/buildtools/gn.pro
 +++ b/src/buildtools/gn.pro
-@@ -20,7 +20,7 @@
-             src_3rd_party_dir = $$absolute_path("$${getChromiumSrcDir()}/../", "$$QTWEBENGINE_ROOT")
-             gn_bootstrap = $$system_path($$absolute_path(chromium/tools/gn/bootstrap/bootstrap.py, $$src_3rd_party_dir))
-             gn_args = $$system_quote($$gn_args)
+@@ -25,7 +25,7 @@ build_pass|!debug_and_release {
+               gn_args = $$replace(gn_args, "use_incremental_linking=true ", "")
+             }
+ 
 -            gn_configure = $$system_quote($$gn_bootstrap) --shadow --gn-gen-args=$$gn_args $$ninja_path
 +            gn_configure = $$system_quote($$gn_bootstrap) --verbose --shadow --gn-gen-args=$$gn_args $$ninja_path
              !system("cd $$system_quote($$system_path($$dirname(out))) && $$pythonPathForSystem() $$gn_configure") {
